# blender_mcp_project

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemini.md  LICENSE  README.md  inject_config.bat  install_bridge.bat  install_codex_mcp.bat  install_gemini_mcp.bat  install_qwen_mcp.bat  pyproject.toml  setup_and_index.bat  start_mcp.bat
.agent/workflows/: asset-export.md  production-render.md  studio-setup.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: README.md  architecture.md  bridge-addon-guide.md  index.md  mcp-tools-reference.md  memory-index.md  setup-guide.md  troubleshooting.md  workflows.md
memory/: 2026-03-07-memory.md  2026-03-15-memory.md
src/: indexer.py  mcp_server.py  mcp_server_v2.py  retriever.py
src/bridge/: __init__.py  routes_advanced.py  routes_animation.py  routes_armature.py  routes_curves.py  routes_file.py  routes_geometry_nodes.py  routes_material.py  routes_mesh.py  routes_modifier.py  routes_render.py  routes_scene.py  routes_uv.py  routes_world.py  security.py
src/mcp_tools/: blender_tools_handler_v2.py  blender_tools_v2.py  docs_tools.py
src/services/: blender_bridge_client.py  database.py  indexer_service.py  vector_store.py
src/utils/: summarize_scene.py  validate_scene.py
steps/: screenshot.py  step01_materials.py  step02_body.py  step03_cabin.py  step04_fenders.py  step05_wheels.py  step06_fascia.py  step07_turret.py  step08_weapons.py  step09_details.py  step10_studio.py  test_simple.py
